--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,7 +1,7 @@
 html {
     scroll-behavior: smooth;
-
 }
+
 i:hover{
     text-decoration: none;
     color: #0c5460;
@@ -78,7 +78,10 @@ body, html {
     padding-bottom: 35px;
 }
 
-#interview-whiteboard-button, #interview-question-round-button {
+
+/*these are the buttons on the interview page review and see what they like*/
+/*#interview-whiteboard-button, #interview-question-round-button {*/
+#sortbutton{
     width: 200px;
     text-align: center;
     color: #E3E7D3;
@@ -86,7 +89,6 @@ body, html {
     border: 2px solid #E3E7D3;
     border-radius: 3px;
     background-color: #0f6674;
-    margin: 5px 5px;
     padding-top: 3px;
     padding-bottom: 5px;
 }
