--- a/src/main/resources/templates/fragments/create-modals.html
+++ b/src/main/resources/templates/fragments/create-modals.html
@@ -35,11 +35,11 @@
                                     </div>
                                 <div class="form-group">
                                     <label for="interview-questions-answer" class="col-form-label">Whats the answer:</label>
-                                    <input class="form-control" name="interview-questions-answer" id="interview-questions-answer"/>
+                                    <textarea class="form-control" name="interview-questions-answer" id="interview-questions-answer" cols="30" rows="5" maxlength="250"
+                                              placeholder="Please type a brief summary that is less than 250 words."></textarea>
                                 </div>
                                 <div class="modal-footer">
                                     <button class="btn btn-secondary submit-button" id="interview-questions-submit-button" data-dismiss="modal">Submit</button>
-                                    <!--                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
                                 </div>
                             </div>
                         </div>
@@ -69,14 +69,14 @@
                         </div>
                         <div class="form-group">
                             <label for="mentorship-posts-body" class="col-form-label">How can you mentor?/whats your question?:</label>
-                            <input class="form-control" name="mentorship-posts-body" id="mentorship-posts-body"/>
+                            <textarea class="form-control" name="mentorship-posts-body" id="mentorship-posts-body" cols="30" rows="5" maxlength="250"
+                                      placeholder="Please type a brief summary that is less than 250 words."></textarea>
                         </div>
-                            <button class="button btn btn-secondary photo-upload" type="button" id="photo-picker">Upload</button>
-                            <input type="hidden" class="mentorship-posts-photo-url" id="photo-upload" name="mentorship-posts-photo-url"/>
-                            <button class="btn btn-secondary submit-button" id="mentorship-posts-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button class="button btn btn-secondary photo-upload" type="button" id="photo-picker">Upload</button>
+                        <input type="hidden" class="mentorship-posts-photo-url" id="photo-upload" name="mentorship-posts-photo-url"/>
+                        <button class="btn btn-secondary submit-button" id="mentorship-posts-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                 </div>
             </div>
@@ -106,12 +106,12 @@
                         </div>
                         <div class="form-group">
                             <label for="job-postings-body" class="col-form-label">Description of the job</label>
-                            <input class="form-control" name="job-postings-body" id="job-postings-body"/>
+                            <textarea class="form-control" name="job-postings-body" id="job-postings-body" cols="30" rows="5" maxlength="250"
+                              placeholder="Please type a brief summary that is less than 250 words."></textarea>
                         </div>
-                            <button class="btn btn-secondary submit-button" id="job-postings-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button class="btn btn-secondary submit-button" id="job-postings-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                 </div>
             </div>
@@ -145,12 +145,12 @@
                         </div>
                         <div class="form-group">
                             <label for="whiteboard-questions-answer" class="col-form-label">How did you solve this:</label>
-                            <input class="form-control" name="whiteboard-questions-answer" id="whiteboard-questions-answer"/>
+                        <textarea class="form-control" name="whiteboard-questions-answer" id="whiteboard-questions-answer" cols="30" rows="5" maxlength="250"
+                                  placeholder="Please type a brief summary that is less than 250 words."></textarea>
                         </div>
-                            <button class="btn btn-secondary submit-button" id="whiteboard-questions-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button class="btn btn-secondary submit-button" id="whiteboard-questions-submit-button" data-dismiss="modal">Submit</button>
                     </div>
                 </div>
             </div>
