--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -12,36 +12,36 @@
                 <a class="navbar-brand" id="logo" href="/users/dashboard">CodeOn</a>
             </li>
             <ul th:if="${#httpServletRequest.requestURI.contains('interview-questions')}" class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{|/users/dashboard|}">Dashboard</a>
+                <li class="nav-item active">
+                    <a class="nav-link active" th:href="@{|/users/dashboard|}">Dashboard</a>
                 </li>
-                <li class="nav-item">
-                    <button class="btn nav-create-button" id="nav-interview-questions-create" data-toggle="modal"
+                <li class="nav-item active">
+                    <button class="btn nav-create-button active" id="nav-interview-questions-create" data-toggle="modal"
                             data-target="#interview-questions-create-modal">Create Question
                     </button>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{|/api/interview-questions|}">Practice</a>
+                <li class="nav-item active">
+                    <a class="nav-link active" th:href="@{|/api/interview-questions|}">Practice</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" th:href="@{|/mentorship-posts/show|}">Mentorship Posts</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{|/job-postings/show|}">Job Postings</a>
+                <li class="nav-item active">
+                    <a class="nav-link active" th:href="@{|/job-postings/show|}">Job Postings</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="whiteboard-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <li class="nav-item active dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" id="whiteboard-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Whiteboard Questions
                     </a>
                     <div class="dropdown-menu bg-dark" aria-labelledby="whiteboard-dropdown">
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard-questions/show|}">Whiteboard Questions Home</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/1|}">Environment 1</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/2|}">Environment 2</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/3|}">Environment 3</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/4|}">Environment 4</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard-questions/show|}">Whiteboard Questions Home</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard/1|}">Environment 1</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard/2|}">Environment 2</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard/3|}">Environment 3</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard/4|}">Environment 4</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <form th:action="@{~/logout_app}" th:method="post">
                         <button class="btn-link btn logout-button">Logout</button>
                     </form>
@@ -165,7 +165,7 @@
                 </li>
             </ul>
             <ul th:if="${#httpServletRequest.requestURI.contains('users/dashboard')}" class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
+                <li class="nav-item active dropdown ">
                     <a class="nav-link dropdown-toggle" href="#" id="create-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Create
                     </a>
@@ -184,34 +184,34 @@
                         </button>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="interview-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <li class="nav-item active dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" id="interview-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Interview Questions
                     </a>
                     <div class="dropdown-menu bg-dark" aria-labelledby="interview-dropdown">
-                        <a class="nav-link bg-dark drop" th:href="@{|/interview-questions/show|}">Interview Questions Home</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/api/interview-questions|}">Interview Questions Practice</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/interview-questions/show|}">Interview Questions Home</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/api/interview-questions|}">Interview Questions Practice</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" th:href="@{|/mentorship-posts/show|}">Mentorship Posts</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" th:href="@{|/job-postings/show|}">Job Postings</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="whiteboard-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <li class="nav-item active dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" id="whiteboard-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Whiteboard Questions
                     </a>
                     <div class="dropdown-menu bg-dark" aria-labelledby="whiteboard-dropdown">
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard-questions/show|}">Whiteboard Questions Home</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/1|}">Environment 1</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/2|}">Environment 2</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/3|}">Environment 3</a>
-                        <a class="nav-link bg-dark drop" th:href="@{|/whiteboard/4|}">Environment 4</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard-questions/show|}">Whiteboard Questions Home</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard/1|}">Environment 1</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard/2|}">Environment 2</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard/3|}">Environment 3</a>
+                        <a class="nav-link active bg-dark drop" th:href="@{|/whiteboard/4|}">Environment 4</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <form th:action="@{~/logout_app}" th:method="post">
                         <button class="btn-link btn logout-button">Logout</button>
                     </form>
