--- a/src/main/resources/templates/interview-questions/show.html
+++ b/src/main/resources/templates/interview-questions/show.html
@@ -15,33 +15,40 @@
     <!--    PROFILE CARD    -->
     <div class="card p-5 mt-5 blue-font" id="profile-card">
         <h2 class="display-1 card-title text-center p-3 profile-header">Interview</h2>
-        <div class="card-text media">
-
+        <div class="row">
+            <div class="col-4 text-center">
+                <a class ="profile-header" id="interview-whiteboard-button" th:href="@{|/whiteboard|}">Whiteboard</a>
+                <!--                <a th:href="@{|/interview-questions/create|}"><button class="btn btn-primary">Interview Create</button></a>-->
+            </div>
+            <div class="col-4">
+                <div class="d-flex justify-content-sm-around dropdown btn ml-5" id="sortbutton">
+                    <a class="dropdown-toggle profile-header" href="#" id="sort-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Sort By
+                    </a>
+                    <div class="dropdown-menu bg-dark" aria-labelledby="whiteboard-dropdown">
+                        <a class="drop" th:href="@{/interview-questions/show(by=titleAsc)}">Title Ascending</a>
+                        <a class="drop" th:href="@{/interview-questions/show(by=titleDesc)}">Title Descending</a>
+                        <a class="drop" th:href="@{/interview-questions/show(by=newest)}">Most Recent</a>
+                        <a class="drop" th:href="@{/interview-questions/show(by=oldest)}">Oldest</a>
+                        <a class="drop" th:href="@{/interview-questions/show}">Highest Rating</a>
+                        <a class="drop" th:href="@{/interview-questions/show(by=lowestRating)}">Lowest Rating</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 text-center">
+                <a class ="profile-header" id="interview-question-round-button" th:href="@{|/api/interview-questions|}">Question Round</a>
+                <!--                <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>-->
+            </div>
         </div>
-        <p class="align-self-end profile-btns">
-            <!--                maybe add some buttons to the front-->
-        </p>
+
     </div>
 </div>
 <br>
-
 <div class="d-flex justify-content-sm-around">
-    <a id="interview-whiteboard-button" th:href="@{|/whiteboard|}">Whiteboard</a>
-    <a id="interview-question-round-button" th:href="@{|/api/interview-questions|}">Question Round</a>
+<!--    <a id="interview-whiteboard-button" th:href="@{|/whiteboard|}">Whiteboard</a>-->
+<!--    <a id="interview-question-round-button" th:href="@{|/api/interview-questions|}">Question Round</a>-->
 </div>
-<div class="d-flex justify-content-sm-around dropdown btn">
-    <a class="dropdown-toggle" href="#" id="sort-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Sort By
-    </a>
-    <div class="dropdown-menu bg-dark" aria-labelledby="whiteboard-dropdown">
-        <a class="drop" th:href="@{/interview-questions/show(by=titleAsc)}">Title Ascending</a>
-        <a class="drop" th:href="@{/interview-questions/show(by=titleDesc)}">Title Descending</a>
-        <a class="drop" th:href="@{/interview-questions/show(by=newest)}">Most Recent</a>
-        <a class="drop" th:href="@{/interview-questions/show(by=oldest)}">Oldest</a>
-        <a class="drop" th:href="@{/interview-questions/show}">Highest Rating</a>
-        <a class="drop" th:href="@{/interview-questions/show(by=lowestRating)}">Lowest Rating</a>
-    </div>
-</div>
+
 <form class="form-inline my-2 my-lg-0">
     <input class="form-control mr-sm-2" type="search" name="searchString" placeholder="Search" aria-label="Search">
     <select class="custom-select" id="select-sort" name="by">
