--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -33,147 +33,25 @@
                 <p class="text-center" id="label-text"> Here at CodeOn we as a community strive build a community of developers that can help
                     the world. Select one of our post types and help another developer. Need help connect with one of our developers </p>
             <div class="row">
-                <div class="col-3">
+                <div class="col-md-3">
                     <a class ="profile-header" th:href="@{|/interview-questions/show|}">Interview Questions</a>
-                    <!--                <a th:href="@{|/interview-questions/create|}"><button class="btn btn-primary">Interview Create</button></a>-->
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                     <a class ="profile-header" th:href="@{|/mentorship-posts/show|}">Mentorship Posts</a>
-                    <!--                <a th:href="@{|/mentorship-posts/create|}"><button class="btn btn-primary">Mentorship Create</button></a>-->
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                     <a class ="profile-header" th:href="@{|/job-postings/show|}">Job Postings</a>
-                    <!--                <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>-->
+
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                     <a class ="profile-header" th:href="@{|/whiteboard-questions/show|}">Whiteboard questions</a>
-                    <!--                <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>-->
+
 
                 </div>
             </div>
             </div>
         </div>
     </div>
-
-
-
-<!--&lt;!&ndash;                    Interview Modal&ndash;&gt;-->
-<!--<div class="modal fade" id="inteviewModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"-->
-<!--     aria-hidden="true">-->
-<!--    <div class="modal-dialog" role="document">-->
-<!--        <div class="modal-content">-->
-<!--            <div class="modal-header">-->
-<!--                <h5 class="modal-title" id="interviewModalLabel">Interview Question</h5>-->
-<!--                <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--                    <span aria-hidden="true">&times;</span>-->
-<!--                </button>-->
-<!--            </div>-->
-<!--            <div class="form-group">-->
-<!--                <div class="modal-body">-->
-<!--                    <form th:action="@{/interview-questions/create}" th:method="post" th:object="${interviewPost}">-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="title" class="col-form-label">Title:</label>-->
-<!--                            <input type="text" class="form-control" id="title" th:field="*{title}">-->
-<!--                        </div>-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="body" class="col-form-label">Body:</label>-->
-<!--                            <input type="text" class="form-control" id="body" th:field="*{body}">-->
-<!--                        </div>-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="answer" class="col-form-label"> Answer:</label>-->
-<!--                            <input type="text" class="form-control" id="answer" th:field="*{answer}">-->
-<!--                        </div>-->
-<!--                        <div class="modal-footer">-->
-<!--                            <button type="submit" class="btn btn-secondary">create post</button>-->
-<!--                            <input type="hidden" class="" id="postTypeId" name="postTypeId" value="1">-->
-<!--                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-<!--                        </div>-->
-<!--                    </form>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--&lt;!&ndash;                        Mentorship modal&ndash;&gt;-->
-<!--<div class="modal fade" id="mentorshipModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"-->
-<!--     aria-hidden="true">-->
-<!--    <div class="modal-dialog" role="document">-->
-<!--        <div class="modal-content">-->
-<!--            <div class="modal-header">-->
-<!--                <h5 class="modal-title" id="mentorshipModalLabel">Mentorship Post</h5>-->
-<!--                <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--                    <span aria-hidden="true">&times;</span>-->
-<!--                </button>-->
-<!--            </div>-->
-<!--            <div class="form-group">-->
-<!--                <div class="modal-body">-->
-<!--                    <form th:action="@{/mentorship-posts/create}" th:method="post" th:object="${mentorshipPost}">-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="title" class="col-form-label">Title:</label>-->
-<!--                            <input type="text" class="form-control" id="title" th:field="*{title}">-->
-<!--                        </div>-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="body" class="col-form-label">Body:</label>-->
-<!--                            <input type="text" class="form-control" id="body" th:field="*{body}">-->
-<!--                        </div>-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="answer" class="col-form-label"> Answer:</label>-->
-<!--                            <input type="text" class="form-control" id="answer" th:field="*{answer}">-->
-<!--                        </div>-->
-<!--                        <div class="modal-footer">-->
-<!--                            <button type="submit" class="btn btn-secondary">create post</button>-->
-<!--                            <input type="hidden" class="" id="postTypeId" name="postTypeId" value="2">-->
-<!--                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-<!--                            <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image-->
-<!--                            </button>-->
-<!--                            <input type="hidden" class="" id="photo-upload" name="photoURL">-->
-<!--                            <input type="submit"/>-->
-<!--                        </div>-->
-
-<!--                    </form>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--&lt;!&ndash;                            jobCreate Modal&ndash;&gt;-->
-<!--<div class="modal fade" id="jobsModal" tabindex="-1" role="dialog" aria-labelledby="jobsModalLabel" aria-hidden="true">-->
-<!--    <div class="modal-dialog" role="document">-->
-<!--        <div class="modal-content">-->
-<!--            <div class="modal-header">-->
-<!--                <h5 class="modal-title" id="jobcreateModalLabel">Jobs Post</h5>-->
-<!--                <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--                    <span aria-hidden="true">&times;</span>-->
-<!--                </button>-->
-<!--            </div>-->
-<!--            <div class="form-group">-->
-<!--                <div class="modal-body">-->
-<!--                    <form th:action="@{/job-postings/create}" th:method="post" th:object="${jobcreatePost}">-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="title" class="col-form-label">Title:</label>-->
-<!--                            <input type="text" class="form-control" id="title" th:field="*{title}">-->
-<!--                        </div>-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="body" class="col-form-label">Body:</label>-->
-<!--                            <input type="text" class="form-control" id="body" th:field="*{body}">-->
-<!--                        </div>-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="answer" class="col-form-label"> Answer:</label>-->
-<!--                            <input type="text" class="form-control" id="answer" th:field="*{answer}">-->
-<!--                        </div>-->
-<!--                        <div class="modal-footer">-->
-<!--                            <button type="submit" class="btn btn-secondary">Create post</button>-->
-<!--                            <input type="hidden" class="" id="postTypeId" name="postTypeId" value="3">-->
-<!--                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-<!--                        </div>-->
-<!--                    </form>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--each of the columns are here for each type of questions-->
-
 <!--    Interview-->
 <div class="row m-5">
     <a id="interview-questions"></a>
